# muse

./: phone_noises.py  pyproject.toml  scratch_patch.py
lib/: oscillator.py
muse/: oscillator.py
