[project]
name = 'muse'  
description = 'Framework for synthesis in python'
authors = [
    {name = 'Coën Needell', email = 'coen@needell.org'},
]
maintainers = [
    {name = 'Coën Needell', email = 'coen@needell.org'},
]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Developers',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Environment :: MacOS X',
]
requires-python = '>=3.10'
version = '0.0.2'
dependencies = [
]

